--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,8 @@ if(${CMAKE_MAJOR_VERSION} LESS 3)
     project(abuse C CXX)
     set(abuse_VERSION 0.8)
 else()
-    project(abuse C CXX VERSION 0.8)
+    cmake_policy(SET CMP0048 NEW)
+    project(abuse LANGUAGES C CXX VERSION 0.8)
 endif()
 
 find_package(SDL 1.1.6 REQUIRED)
