--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -82,5 +82,29 @@ include_directories(
     ${SDL_INCLUDE_DIR}
     ${SDL_MIXER_INCLUDE_DIR}
 )
-
-install(TARGETS abuse abuse-tool RUNTIME DESTINATION bin)
+if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
+    # Under Windows, throw them into the root
+    install(TARGETS abuse abuse-tool
+        RUNTIME DESTINATION "."
+        LIBRARY DESTINATION ".")
+    # We also need to include the SDL DLLs or nothing will work
+    string(FIND "${SDL_LIBRARY}" ";" INDEX)
+    if (${INDEX} GREATER -1)
+        string(SUBSTRING "${SDL_LIBRARY}" 0 ${INDEX} SDL_DLL_PATH)
+    else()
+        set(SDL_DLL_PATH "${SDL_LIBRARY}")
+    endif()
+    get_filename_component(SDL_DLL_PATH "${SDL_DLL_PATH}" DIRECTORY)
+    install(FILES ${SDL_DLL_PATH}/SDL.dll DESTINATION ".")
+    string(FIND "${SDLMIXER_LIBRARY}" ";" INDEX)
+    if (${INDEX} GREATER -1)
+        string(SUBSTRING "${SDLMIXER_LIBRARY}" 0 ${INDEX} SDLMIXER_DLL_PATH)
+    else()
+        set(SDLMIXER_DLL_PATH "${SDLMIXER_LIBRARY}")
+    endif()
+    get_filename_component(SDLMIXER_DLL_PATH "${SDLMIXER_DLL_PATH}" DIRECTORY)
+    install(FILES ${SDLMIXER_DLL_PATH}/SDL_mixer.dll DESTINATION ".")
+else()
+    # Under Linux, we want the tools in bin
+    install(TARGETS abuse abuse-tool RUNTIME DESTINATION bin)
+endif()
