--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -100,11 +100,11 @@ include_directories(
     ${SDL_INCLUDE_DIR}
     ${SDL_MIXER_INCLUDE_DIR}
 )
-if(PLATFORM_WIN32)
+if(PLATFORM_WINDOWS)
     # Under Windows, throw them into the root
     install(TARGETS abuse abuse-tool
-        RUNTIME DESTINATION "${CMAKE_INSTALL_PREFIX}"
-        LIBRARY DESTINATION "${CMAKE_INSTALL_PREFIX}")
+        RUNTIME DESTINATION "."
+        LIBRARY DESTINATION ".")
     # We also need to include the SDL DLLs or nothing will work
     string(FIND "${SDL_LIBRARY}" ";" INDEX)
     if (${INDEX} GREATER -1)
@@ -113,7 +113,7 @@ if(PLATFORM_WIN32)
         set(SDL_DLL_PATH "${SDL_LIBRARY}")
     endif()
     get_filename_component(SDL_DLL_PATH "${SDL_DLL_PATH}" DIRECTORY)
-    install(FILES ${SDL_DLL_PATH}/SDL.dll DESTINATION "${CMAKE_INSTALL_PREFIX}")
+    install(FILES ${SDL_DLL_PATH}/SDL.dll DESTINATION ".")
     string(FIND "${SDLMIXER_LIBRARY}" ";" INDEX)
     if (${INDEX} GREATER -1)
         string(SUBSTRING "${SDLMIXER_LIBRARY}" 0 ${INDEX} SDLMIXER_DLL_PATH)
@@ -121,7 +121,7 @@ if(PLATFORM_WIN32)
         set(SDLMIXER_DLL_PATH "${SDLMIXER_LIBRARY}")
     endif()
     get_filename_component(SDLMIXER_DLL_PATH "${SDLMIXER_DLL_PATH}" DIRECTORY)
-    install(FILES ${SDLMIXER_DLL_PATH}/SDL_mixer.dll DESTINATION "${CMAKE_INSTALL_PREFIX}")
+    install(FILES ${SDLMIXER_DLL_PATH}/SDL_mixer.dll DESTINATION ".")
 else()
     # Under Linux, we want the tools in bin
     install(TARGETS abuse abuse-tool RUNTIME DESTINATION bin
