Update building instructions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,7 +82,7 @@ set(CPACK_PACKAGE_EXECUTABLES "abuse;Abuse")
 if (PLATFORM_WINDOWS)
     set(CPACK_GENERATOR "WIX;ZIP")
 elseif(PLATFORM_MAC_OS_X)
-    set(CPACK_GENERATOR "DMG")
+    set(CPACK_GENERATOR "DMG;TGZ")
 else()
     set(CPACK_GENERATOR "TGZ")
 endif()
