It's "DragNDrop" not "DMG"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -81,7 +81,7 @@ set(CPACK_PACKAGE_EXECUTABLES "abuse;Abuse")
 if (PLATFORM_WINDOWS)
     set(CPACK_GENERATOR "WIX;ZIP")
 elseif(PLATFORM_MAC_OS_X)
-    set(CPACK_GENERATOR "DMG;TGZ")
+    set(CPACK_GENERATOR "DragNDrop;TGZ")
 else()
     set(CPACK_GENERATOR "TGZ")
 endif()
