SDL2 compiles now (still doesn't work)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -90,7 +90,7 @@ target_link_libraries(abuse sdlport)
 target_link_libraries(abuse imlib)
 target_link_libraries(abuse net)
 target_link_libraries(abuse ${SDL2_LIBRARY})
-target_link_libraries(abuse ${SDLMIXER_LIBRARY})
+target_link_libraries(abuse ${SDL2_MIXER_LIBRARIES})
 if(OPENGL_FOUND)
     target_link_libraries(abuse ${OPENGL_LIBRARIES})
 endif(OPENGL_FOUND)
@@ -120,15 +120,15 @@ if(PLATFORM_WINDOWS)
         set(SDL2_DLL_PATH "${SDL2_LIBRARY}")
     endif()
     get_filename_component(SDL2_DLL_PATH "${SDL2_DLL_PATH}" DIRECTORY)
-    install(FILES ${SDL2_DLL_PATH}/SDL.dll DESTINATION ".")
-    string(FIND "${SDLMIXER_LIBRARY}" ";" INDEX)
+    install(FILES ${SDL2_DLL_PATH}/SDL2.dll DESTINATION ".")
+    string(FIND "${SDL2_MIXER_LIBRARIES}" ";" INDEX)
     if (${INDEX} GREATER -1)
-        string(SUBSTRING "${SDLMIXER_LIBRARY}" 0 ${INDEX} SDLMIXER_DLL_PATH)
+        string(SUBSTRING "${SDL2_MIXER_LIBRARIES}" 0 ${INDEX} SDL2MIXER_DLL_PATH)
     else()
-        set(SDLMIXER_DLL_PATH "${SDLMIXER_LIBRARY}")
+        set(SDL2MIXER_DLL_PATH "${SDL2_MIXER_LIBRARIES}")
     endif()
-    get_filename_component(SDLMIXER_DLL_PATH "${SDLMIXER_DLL_PATH}" DIRECTORY)
-    install(FILES ${SDLMIXER_DLL_PATH}/SDL2_mixer.dll DESTINATION ".")
+    get_filename_component(SDL2MIXER_DLL_PATH "${SDL2MIXER_DLL_PATH}" DIRECTORY)
+    install(FILES ${SDL2MIXER_DLL_PATH}/SDL2_mixer.dll DESTINATION ".")
 else()
     # Under Linux, we want the tools in bin
     install(TARGETS abuse abuse-tool RUNTIME DESTINATION bin
