Fix to work with SDL2
Also add a more user-friendly error message should things die on startup

--- a/src/sdlport/CMakeLists.txt
+++ b/src/sdlport/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(sdlport
     joystick.cpp joy.h
     setup.cpp setup.h
     hmi.cpp hmi.h
+    errorui.cpp errorui.h
 )
 #libsdlport_a_LIBADD =
 #
